JDK 24: update JEPs